--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:fillColor="#e8def8"
+        android:fillColor="@android:color/system_accent2_100"
         android:pathData="M0,0h108v108h-108z" />
 </vector>
