--- a/app/src/main/res/drawable-v31/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v31/ic_launcher_foreground.xml
@@ -8,7 +8,7 @@
         android:translateX="-259.25"
         android:translateY="-259.25">
         <path
-            android:fillColor="#377CA7"
+            android:fillColor="@android:color/system_accent1_500"
             android:name="Color Fill 1"
             android:pathData="m855.1 579.4c10.8 0 19.8 6.6 24.9 10.6c1.4 1.3 13.3 8.9 19 18c-0.2 -0.3 -0.2 -0.4 -0.2 -0.4c0.5 0 18.9 25.2 -1.8 47.4c0.1 -2 -69.1 -55.2 -68 -61c9.1 -11 18.1 -14.6 26.1 -14.6zm-33.1 51.6c-14.3 15.8 -73.9 80.7 -123 136c1.1 2.7 9.5 9.5 13 11c10.6 -14.4 116.7 -129.9 121 -136c-5.5 -4.7 -7.4 -8 -11 -11zm-4.1 -26.3c9.4 0 55.8 46.7 69.1 60.3c2.3 7.8 -103.7 118.1 -145 164c-2.3 -0.2 -5.1 -0.4 -7.2 -2.1c-21.4 -17.1 -44.8 -39.9 -60.8 -55.9c-3.1 -2.4 -1.7 -4.6 9.6 -17.2c2.7 -3 126.1 -140.8 133.6 -149c0.2 -0.1 0.5 -0.1 0.7 -0.1zm-154.9 223.3c-0 0 -0 0 -0 0c-4.5 11.8 -13.2 32.4 -13 34c0.1 0 0.1 0 0.3 0c3.6 0 33.4 -15.1 32.7 -16c0 -0.3 0 -0.7 0 -1c-7.1 -6.8 -18.7 -17 -20 -17zm7 -49c12.1 10.2 34.1 29.2 37 32c7.3 6.3 12.1 10.4 22 20c6.7 4.2 -93.3 50.8 -97 51c-0.1 0 -0.2 0.1 -0.2 0.1c-4.3 0 28.5 -83.9 38.2 -103.1zm216.6 125c7.6 0 14.8 0.3 19.4 3c0.1 8.3 0.8 18.7 -2 24h-261c-4.9 0 -10.9 0.4 -16.5 0.4c-4.7 0 -9.2 -0.3 -12.5 -1.4c-0.2 -9.7 -1.5 -20.7 3 -26h262c2.5 0 5.1 -0 7.6 -0zm4.4 -394.2c-37.9 0 -102.6 1.4 -220.2 1.4c-24 0 -50.2 -0.1 -78.8 -0.2c-15.7 5.1 -31.7 9.3 -43 35c-3.8 8.5 -4 399.4 -3.2 399.4c0.1 0 0.1 -1.7 0.2 -5.4c-0 19.6 -3 34.6 7 49c16.8 24.1 35.6 27.6 62.6 27.6c11.2 0 23.9 -0.6 38.4 -0.6h203c13.9 0 30 0.9 45.4 0.9c21.5 0 41.8 -1.7 53.6 -9.9c30.6 -21.3 24 -59.1 24 -109c0 -87 0 -174 0 -261c0 -45.4 7.2 -95.3 -20 -114c-15.8 -10.9 -20.2 -13.2 -69 -13.2z" />
     </group>
