--- a/app/src/main/res/drawable/writingboard_logo.xml
+++ b/app/src/main/res/drawable/writingboard_logo.xml
@@ -1,12 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:width="200dp"
-    android:height="200dp"
+    android:width="35dp"
+    android:height="35dp"
     android:viewportWidth="1568"
     android:viewportHeight="1508">
     <path
-        android:fillColor="#FFFFFF"
-        android:name="Layer 2 copy 9"
+        android:fillColor="#000000"
         android:pathData="m982 324c51.8 0.8 101.3 48.8 120 84c6.5 12.3 18.2 33.3 12 54c-3.7 12.4 -15.8 21.7 -24 30c-16.5 -0.8 -31.9 -24.5 -43 -33c-39 -29.9 -75.8 -65 -111 -99c0 -2 0 -4 0 -6c7.4 -7.3 13.1 -18.5 22 -24c6.5 -4 16.9 -2.1 24 -6zm-70.9 119c-0 0 -0.1 0 -0.1 0c-94 104 -188 208 -282 312c-0.3 17.6 16.6 33 33.8 33c0.1 0 0.1 -0 0.2 -0c24.7 -25.4 50.3 -51.8 72 -80c16.2 -21.2 37.6 -38.6 54 -60c21.1 -27.5 51.9 -51.5 73 -79c16.7 -21.8 38.5 -39.5 55 -61c8.3 -10.8 17.5 -23.5 28 -32c0.2 -17.3 -17 -33 -33.9 -33zm-3.1 -55c24.6 0.4 32.7 20 47 31c24.9 19.1 45.3 44 70 63c10.2 7.9 24.5 17.6 32 28c2 4.3 4 8.7 6 13c-0.7 16.1 -15.5 25 -24 34c-13.2 13.9 -26.3 28.8 -38 44c-6 6 -12 12 -18 18c-25.5 33.2 -57.5 60.8 -83 94c-7.7 10 -19.3 18 -27 28c-19.4 25.3 -44.8 45.9 -64 71c-23.7 30.9 -51.7 60.4 -80 87c-17.7 -2.8 -34.1 -28.1 -47 -38c-18.2 -14 -33 -32.2 -51 -46c-20.3 -15.5 -39.6 -33.5 -57 -52c0.7 -15.9 13.7 -20.5 21 -30c19.4 -25.3 44.8 -45.9 64 -71c14 -18.2 32.2 -33 46 -51c47 -61.3 107 -111.8 154 -173c13.5 -17.5 32.2 -31.7 46 -49c2 -0.4 2 -0.4 3 -1zm-367 503c-6 9.3 -8.3 21 -13 32c-7.1 16.5 -15.1 35.7 -22 52c-1.8 4.4 -1.6 8.5 -4 12c0 3.3 0.3 5.9 1 8c13.4 -0.8 23 -9.9 33 -15c23.1 -11.7 45.2 -21.7 67 -34c-0.6 -11.9 -11.8 -16.5 -19 -22c-4.3 -4.3 -8.7 -8.7 -13 -13c-8 -6.1 -17.6 -12.3 -24 -20zm25 -102c19.8 19.5 44.5 39.4 67 56c11.8 8.7 21.2 22.3 33 31c10.6 7.8 29.2 19.1 33 33c-16.5 16.2 -42.5 21.7 -63 34c-39.5 23.8 -84.4 41.7 -124 65c-11.6 6.8 -24.6 9.4 -35 17c-2.7 -1 -2.9 -1.7 -5 -3c0.7 -21.3 19.4 -56 27 -74c16.6 -39.4 29.9 -79.7 46 -118c6.2 -14.8 9.5 -28.6 17 -41zm515.4 293.7c7.9 0 14.9 0.7 18.6 3.3c3.9 1.4 6.7 4.1 8 8c3.7 5.6 3.9 30.7 1 38c-2.3 3 -4.7 6 -7 9c-8.2 1.9 -18.6 2.3 -29.3 2.3c-9.4 0 -19 -0.3 -27.7 -0.3h-554c-6.8 0 -17.6 1.1 -27.2 1.1c-7.5 0 -14.2 -0.7 -17.8 -3.1c-9.6 -3.5 -15.9 -36.4 -8 -47c2.1 -5.8 6.5 -6.7 11 -10h603c7.3 -0 19 -1.3 29.4 -1.3zm-709.4 -921.7c-9.7 2.7 -19.3 5.3 -29 8c-27.1 11.6 -49.4 34 -61 61c-9.4 21.9 -8 54.1 -8 86c0 49.3 0 98.7 0 148c0 177.6 0 355.4 0 533c0 61.3 0 122.7 0 184c-0 35 -2.5 73.6 8 98c15 34.8 44.1 57.9 84 68c15.7 0.3 31.3 0.7 47 1h729c20 -0.3 40 -0.7 60 -1c19.3 -4.8 36.1 -12.6 50 -23c20.1 -15 33.9 -40 41 -68c0.3 -19 0.7 -38 1 -57c0 -39 0 -78 0 -117c0 -211 0 -422 0 -633c0 -44 0 -88 0 -132c-0.3 -21.3 -0.7 -42.7 -1 -64c-6.1 -24.1 -17.8 -49.8 -35 -63c-16.1 -12.3 -33.1 -22.2 -56 -28c-22.3 -0.3 -44.7 -0.7 -67 -1z"
         tools:ignore="VectorPath" />
 </vector>
