--- a/app/src/main/res/xml/writingboard_textonly_widget_info.xml
+++ b/app/src/main/res/xml/writingboard_textonly_widget_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/glance_default_loading_layout"
+    android:initialLayout="@layout/widget"
     android:resizeMode="horizontal|vertical"
     android:minWidth="80dp"
     android:minHeight="40dp"
