--- a/app/src/main/res/values/splashs.xml
+++ b/app/src/main/res/values/splashs.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="Theme.WritingBoard.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
-        <item name="windowSplashScreenBackground">#D3E2F0</item>
+        <item name="windowSplashScreenBackground">@color/SplashScreenBackground</item>
         <item name="postSplashScreenTheme">@style/Theme.WritingBoard</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
