--- a/app/src/main/res/drawable/widget_textonly_preview.xml
+++ b/app/src/main/res/drawable/widget_textonly_preview.xml
@@ -5,11 +5,11 @@
     android:viewportWidth="1381"
     android:viewportHeight="1450">
     <path
-        android:fillColor="#00668B"
+        android:fillColor="@color/WidgetSide"
         android:pathData="m388 149c156.7 0 313.3 0 470 0c63.7 -0 145.7 -10.1 174 26c9 11.5 17.9 24.8 22 41c4.9 19.3 2 46.6 2 69c0 45 0 90 0 135c-0.3 202 -0.7 404 -1 606c0.3 45 0.7 90 1 135c0 22.6 2.7 49.7 -3 68c-7 22.2 -21 40.8 -39 52c-22 13.6 -56.7 12 -93 12c-59 0 -118 0 -177 0c-89 0 -178 0 -267 0c-54.2 0 -99.9 4.4 -131 -19c-41.3 -31.1 -32 -100 -32 -171c0 -144.7 0 -289.3 0 -434c0 -107 0 -214 0 -321c-0 -41.1 -6.2 -116.7 6 -146c9 -21.4 27.5 -39.1 49 -48c6.3 -1.7 12.7 -3.3 19 -5z"
         tools:ignore="NewApi" />
     <path
-        android:fillColor="#DCE3E9"
+        android:fillColor="@color/WidgetBackground"
         android:pathData="m407 162c147.3 0 294.7 0 442 0c71.2 -0 143 -9.4 174 32c7.2 9.6 13.5 22.1 17 35c4.9 18.4 2 45.4 2 67c0 44.3 0 88.7 0 133c0 198.3 0 396.7 0 595c0 42.3 0 84.7 0 127c0 23.8 2 50.6 -4 69c-6.6 20.5 -22 37.7 -39 48c-21 12.7 -54.6 11 -89 11c-56.7 0 -113.3 0 -170 0c-84.7 0 -169.3 0 -254 0c-57.1 0 -96.6 5.1 -130 -20c-38.6 -29.1 -30 -98.3 -30 -165c0 -140 0 -280 0 -420c0 -105 0 -210 0 -315c-0 -44 -6.7 -113.2 7 -145c8.2 -18.9 25.9 -37 45 -45c8.4 -3.5 20.8 -2.3 29 -7z"
         tools:ignore="NewApi" />
 </vector>
