--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/loading"
+        android:textColor="@color/WidgetTextColor"
         tools:ignore="RtlSymmetry,TextContrastCheck" />
 
 </FrameLayout>
