--- a/app/src/main/res/drawable/widget_button.xml
+++ b/app/src/main/res/drawable/widget_button.xml
@@ -5,12 +5,12 @@
     android:viewportWidth="841"
     android:viewportHeight="841">
     <path
-        android:fillColor="#D1E5F4"
+        android:fillColor="@color/WidgetButtonIcon"
         android:name="widget_button_background"
         android:pathData="m231.3 21c89.4 0 178.8 0 268.2 0c48.6 -0 105.5 -5 145.4 5.9c55.1 15 101 43 130.7 83.5c19 26 31.9 57.9 41.3 93.3c0.7 9.8 1.3 19.7 2 29.5c3.1 13.9 2 35 2 52.1c0 31.1 0 62.2 0 93.3c0 55.7 0 111.4 0 167c0 30.8 2.7 66.7 -3.9 92.4c-16.7 64.3 -49.7 114.2 -99.2 145.4c-23.7 14.9 -51.3 26.5 -82.5 33.4c-3.6 0 -7.2 0 -10.8 0c-19.6 4.5 -46 3.9 -70.7 3.9c-31.8 0 -63.5 0 -95.3 0c-45.5 0 -91 0 -136.6 0c-39 0 -82.3 3.6 -115.9 -3.9c-85.4 -19.3 -154.6 -79.4 -176.9 -161.1c-8.7 -31.8 -7.9 -69 -7.9 -109.1c0 -49.1 0 -98.3 0 -147.4c0 -36 0 -72.1 0 -108.1c-0 -25.2 -0.6 -54.3 3.9 -73.7c2.8 -12.1 0.6 -21.2 3.9 -31.4c22 -68 65.7 -120.4 129.7 -146.4c14.2 -5.8 30.4 -11.3 45.2 -14.7c10.5 -2.4 20.1 0.9 27.5 -3.9z"        tools:ignore="NewApi" />
     <path
         android:name="widget_button_foreground"
-        android:fillColor="#FF605A7C"
+        android:fillColor="@color/WidgetButtonBackground"
         android:pathData="m499 291c19.6 0.4 42 33.9 53 46c-1.6 17.9 -19.9 26.9 -30 37c-7.9 -1.7 -11.2 -8.2 -16 -13c-9.6 -9.6 -33.8 -28.6 -39 -40c10.6 -10.2 21.1 -20 32 -30zm-51 49c9.1 0.7 11.2 6.2 16 11c9.1 9.1 34.4 28.2 38 40c0.7 1 0.4 0.4 1 2c-38 37.7 -75.2 76.2 -113 114c-10.6 10.6 -35.3 41.2 -48 46c-1.9 1.1 -9.6 1.6 -18.4 1.6c-13.5 0 -29.6 -1.1 -31.6 -2.6c-4 -3.2 -7 -40.5 -4 -50c3.7 -4.3 7.3 -8.7 11 -13c49.7 -49.7 99.3 -99.3 149 -149zm126.8 -327.1c-24.7 0 -50.2 1.1 -73.8 1.1h-273c-7.6 4.9 -17.3 1.5 -28 4c-15.1 3.5 -31.5 9.1 -46 15c-65.1 26.4 -109.6 79.8 -132 149c-3.4 10.4 -1.1 19.7 -4 32c-4.6 19.8 -4 49.4 -4 75c0 36.7 0 73.3 0 110c0 50 0 100 0 150c0 40.8 -0.8 78.6 8 111c22.7 83.3 92.7 143.5 179 164c16.8 4 36.1 5 56.2 5c19.9 0 40.4 -1 59.8 -1h238c0 0 0.1 0 0.1 0c4.4 0 9 0 13.5 0c21.3 0 43.2 -0.3 59.4 -4h13c31.9 -7.5 61.9 -19.8 86 -36c35.4 -23.7 66.6 -61.4 84 -103c20 -48 17 -118.2 17 -187c0 -64.7 0 -129.3 0 -194c-0 -31.3 1.8 -66.4 -4 -92c0 -4 0 -8 0 -12c-9.5 -36.1 -22.6 -68.6 -42 -95c-30.2 -41.2 -76.9 -69.8 -133 -85c-21.2 -5.8 -47.2 -7.1 -74.2 -7.1z"
         tools:ignore="NewApi,VectorPath" />
 </vector>
