--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="SplashScreenBackground">#FF4E616C</color>
+    <color name="WidgetSide">#FF4BB6E8</color>
+    <color name="WidgetBackground">#FF40484D</color>
+    <color name="WidgetButtonBackground">#FF938CB1</color>
+    <color name="WidgetButtonIcon">#FF20333D</color>
+    <color name="WidgetTextColor">#FFDCE3E9</color>
 </resources>
