--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="SplashScreenBackground">#FFD3E2F0</color>
+    <color name="WidgetSide">#FF00668B</color>
+    <color name="WidgetBackground">#FFDCE3E9</color>
+    <color name="WidgetButtonBackground">#FF605A7C</color>
+    <color name="WidgetButtonIcon">#FFD1E5F4</color>
+    <color name="WidgetTextColor">#FF161C20</color>
 </resources>
