--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -4,14 +4,43 @@
     style="@style/Glance.AppWidget.Background.Loading"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/widget_loading_view"
-    android:padding="0dp">
+    android:layout_gravity="center"
+    android:padding="0dp"
+    android:visibility="visible">
+
+    <ImageView
+        android:id="@+id/side_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/widget_loading_view_shape"
+        android:backgroundTint="@color/WidgetSide"
+        android:foregroundGravity="center"
+        android:importantForAccessibility="no"
+        android:importantForAutofill="yesExcludeDescendants"
+        tools:ignore="ImageContrastCheck" />
+
+    <ImageView
+        android:id="@+id/background_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginVertical="5dp"
+        android:layout_marginStart="5dp"
+        android:background="@drawable/widget_loading_view_shape"
+        android:backgroundTint="@color/WidgetBackground"
+        android:foregroundGravity="center"
+        android:importantForAccessibility="no"
+        android:importantForAutofill="yesExcludeDescendants"
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif"
+        android:textFontWeight="700"
         android:text="@string/loading"
         android:textColor="@color/WidgetTextColor"
         tools:ignore="RtlSymmetry,TextContrastCheck" />
